--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mkorkmaz/redislabs-redisgraph-php",
+    "name": "mkorkmaz/redisgraph-php",
     "description": "PHP Client for Redislabs Redis Graph Module.",
     "type": "library",
     "license": "MIT",
@@ -12,7 +12,6 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.2",
-        "ext-json": "*",
         "mkorkmaz/redislabs-common": "^0.1",
         "sevenecks/tableify": "^0.0.5"
     },
