--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     },
     "suggest": {
         "predis/predis": "If your application depends on predis.",
-        "ext-redis": "If your application depends of redis PCEL extention."
+        "ext-redis": "If your application depends of redis PCEL extention.",
+        "mper/cypher-querybuilder": "A php query builder for cypher queries."
     },
     "autoload": {
         "psr-4": {
