--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ before_script:
   - composer install -n
 script:
   - vendor/bin/codecept run unit --coverage --coverage-xml
+  - composer run phpcs
+  - composer run phpstan
+  - composer run bc-check
+
 after_script:
   - if [ $TRAVIS_PHP_VERSION = '7.2' ]; then php vendor/bin/php-coveralls; fi
 after_success:
