--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,19 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.2",
-        "mkorkmaz/redislabs-common": "^0.1",
+        "php": "^7.4|^8.0",
+        "mkorkmaz/redislabs-common": "^0.2",
         "sevenecks/tableify": "^0.0.5"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "roave/backward-compatibility-check": "^2.0",
-        "codeception/codeception": "^2.5",
+        "codeception/codeception": "^4.0",
         "php-coveralls/php-coveralls": "^2.1",
         "squizlabs/php_codesniffer": "^3.3",
         "predis/predis": "^1.1",
         "ext-redis": "*",
-        "phpstan/phpstan": "^0.10.6"
+        "phpstan/phpstan": "^0.12",
+        "codeception/module-asserts": "^1.3"
     },
     "suggest": {
         "predis/predis": "If your application depends on predis.",
@@ -40,10 +40,8 @@
     },
     "scripts": {
         "unit-tests": "vendor/bin/codecept run unit --coverage",
-        "bc-check": "php -d memory_limit=1G vendor/bin/roave-backward-compatibility-check",
         "phpstan": "vendor/bin/phpstan analyse -l 4 src",
-        "phpcs": "vendor/bin/phpcs --standard=PSR2 src tests",
-        "phpcbf": "vendor/bin/phpcbf --standard=PSR2 src tests",
-        "phpcs-object-calisthenics": "vendor/bin/phpcs src -sp --standard=vendor/object-calisthenics/phpcs-calisthenics-rules/src/ObjectCalisthenics/ruleset.xml"
+        "phpcs": "vendor/bin/phpcs --standard=PSR12 src tests",
+        "phpcbf": "vendor/bin/phpcbf --standard=PSR12 src tests"
     }
 }
