--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
   - docker run -d -p 6379:6379 --name redisgraph redislabs/redisgraph:latest
   - composer install -n
 script:
+  - export XDEBUG_MODE=coverage
   - vendor/bin/codecept run unit --coverage --coverage-xml
   - composer run phpcs
   - composer run phpstan
