--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,20 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4|^8.0",
-        "mkorkmaz/redislabs-common": "^0.2",
+        "mkorkmaz/redislabs-common": "^0.2.2",
         "sevenecks/tableify": "^0.0.5"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "codeception/codeception": "^4.0",
-        "php-coveralls/php-coveralls": "^2.1",
-        "squizlabs/php_codesniffer": "^3.3",
-        "predis/predis": "^1.1",
+        "codeception/codeception": "^4.1.21",
+        "php-coveralls/php-coveralls": "^v2.4.3",
+        "squizlabs/php_codesniffer": "^3.6.0",
+        "predis/predis": "^v1.1.7",
         "ext-redis": "*",
-        "phpstan/phpstan": "^0.12",
-        "codeception/module-asserts": "^1.3"
+        "phpstan/phpstan": "^0.12.90",
+        "codeception/module-asserts": "^1.3.1",
+        "malukenho/mcbumpface": "^1.1.5",
+        "damianopetrungaro/php-commitizen": "^0.2.0"
     },
     "suggest": {
         "predis/predis": "If your application depends on predis.",
