--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -15,10 +15,11 @@ build:
         - igbinary
         - redis
   tests:
+    before:
+      - 'docker run -p 6379:6379 --name redis-redisgraph redislabs/redisgraph:latest'
     override:
       -
         command:
-          - 'docker run -p 6379:6379 --name redis-redisgraph redislabs/redisgraph:latest'
           - 'composer run unit-tests'
         coverage:
           file: 'tests/_output/coverage.xml'
