scrutinizer config updated [skip ci]

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,31 +1,28 @@
 # .scrutinizer.yml
 checks:
   php: true
-filter:
-  excluded_paths:
-    - "tests/"
-    -
 build:
   nodes:
     analysis:
       tests:
         override:
           - php-scrutinizer-run
-    redisgraph:
-      commands:
-        - 'docker run -p 6379:6379 --name redis-redisgraph redislabs/redisgraph:latest'
   environment:
     docker: true
+    redis: false
     php:
       version: 7.4
       pecl_extensions:
         - igbinary
         - redis
   tests:
-    -
-      command: 'composer run unit-tests'
-      coverage:
-        file: 'tests/_output/coverage.xml'
-        format: 'clover'
-    - 'composer run phpcs'
-    - 'composer run phpstan'
+    override:
+      - 'docker run -p 6379:6379 --name redis-redisgraph redislabs/redisgraph:latest'
+      -
+        command: 'composer run unit-tests'
+        coverage:
+          file: 'tests/_output/coverage.xml'
+          format: 'clover'
+filter:
+  excluded_paths:
+    - "tests/"
