--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     },
     "scripts": {
         "commit": "vendor/bin/php-commitizen commit",
-        "unit-tests": "vendor/bin/codecept run unit --coverage",
+        "unit-tests": "vendor/bin/codecept run unit --coverage --coverage-xml",
         "phpstan": "vendor/bin/phpstan analyse -l 4 src",
         "phpcs": "vendor/bin/phpcs --standard=PSR12 src tests",
         "phpcbf": "vendor/bin/phpcbf --standard=PSR12 src tests"
