--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,15 @@
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "codeception/codeception": "^4.1.21",
-        "php-coveralls/php-coveralls": "^v2.4.3",
-        "squizlabs/php_codesniffer": "^3.6.0",
-        "predis/predis": "^v1.1.7",
+        "codeception/codeception": "^4.2.1",
+        "php-coveralls/php-coveralls": "^v2.5.2",
+        "squizlabs/php_codesniffer": "^3.7.1",
+        "predis/predis": "^v1.1.10",
         "ext-redis": "*",
-        "phpstan/phpstan": "^0.12.90",
         "codeception/module-asserts": "^1.3.1",
         "malukenho/mcbumpface": "^1.1.5",
         "damianopetrungaro/php-commitizen": "^0.2.0",
-        "vimeo/psalm": "^4.8.1"
+        "vimeo/psalm": "^4.24.0"
     },
     "suggest": {
         "predis/predis": "If your application depends on predis.",
@@ -44,7 +43,7 @@
     "scripts": {
         "commit": "vendor/bin/php-commitizen commit",
         "unit-tests": "vendor/bin/codecept run unit --coverage --coverage-xml",
-        "psalm": "vendor/bin/psalm -l 1",
+        "psalm": "vendor/bin/psalm",
         "phpcs": "vendor/bin/phpcs --standard=PSR12 src tests",
         "phpcbf": "vendor/bin/phpcbf --standard=PSR12 src tests"
     }
