feat: php7 support dropped
- reafactored for php8.0
- php 8.2 support added

--- a/codeception.yml
+++ b/codeception.yml
@@ -15,6 +15,9 @@ paths:
     output: tests/_output
     support: tests/_support
     data: tests
+extensions:
+    enabled:
+        - Codeception\Extension\DotReporter
 coverage:
     enabled: true
     include:
