--- a/composer.json
+++ b/composer.json
@@ -11,21 +11,21 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4|^8.0",
-        "mkorkmaz/redislabs-common": "^0.2.2",
+        "php": "^8.0",
+        "mkorkmaz/redislabs-common": "^1.1",
         "sevenecks/tableify": "^0.0.5"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master",
-        "codeception/codeception": "^4.2.1",
-        "php-coveralls/php-coveralls": "^v2.5.2",
+        "codeception/codeception": "^5.0.5",
+        "php-coveralls/php-coveralls": "^v2.5.3",
         "squizlabs/php_codesniffer": "^3.7.1",
-        "predis/predis": "^v1.1.10",
+        "predis/predis": "^v2.0.3",
         "ext-redis": "*",
-        "codeception/module-asserts": "^1.3.1",
+        "codeception/module-asserts": "^3.0.0",
         "malukenho/mcbumpface": "^1.1.5",
         "damianopetrungaro/php-commitizen": "^0.2.0",
-        "vimeo/psalm": "^4.24.0"
+        "vimeo/psalm": "^5.1.0"
     },
     "suggest": {
         "predis/predis": "If your application depends on predis.",
@@ -46,5 +46,10 @@
         "psalm": "vendor/bin/psalm",
         "phpcs": "vendor/bin/phpcs --standard=PSR12 src tests",
         "phpcbf": "vendor/bin/phpcbf --standard=PSR12 src tests"
+    },
+    "config": {
+        "allow-plugins": {
+            "malukenho/mcbumpface": true
+        }
     }
 }
